--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "pg-pool": "^3.5.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/instachat.api/Server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
