created doc swagger, created entity chat

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "pg-pool": "^3.5.1"
+    "pg-pool": "^3.5.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
-    "dev": "nodemon src/instachat.api/Server.js"
+    "dev": "nodemon src/instachat.api/Startup.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
