--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.3",
-    "mocha": "^9.2.1",
     "pg": "^8.7.3",
     "pg-pool": "^3.5.1",
-    "supertest": "^6.2.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
     "dev": "nodemon src/instachat.api/Startup.js",
-    "start": "node src/instachat.api/Startup.js"
+    "start": "node src/instachat.api/Startup.js",
+    "test": "jest --coverage"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "chai": "^4.3.6",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   }
 }
