--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.3",
+    "mongoose": "^6.2.5",
     "pg": "^8.7.3",
     "pg-pool": "^3.5.1",
     "swagger-jsdoc": "^6.1.0",
