--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.5",
     "pg": "^8.7.3",
     "pg-pool": "^3.5.1",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "ws": "^8.5.0"
   },
   "scripts": {
     "dev": "nodemon src/instachat.api/Startup.js",
